--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
-body {
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html,
+body,
+#root {
+  height: 100%;
+  background-color: #fff;
+  font-family: "Poppins", sans-serif;
+}
+
+.container {
+  min-height: 100%;
+}
+
+.nav {
+  display: flex;
+  height: 70px;
+  padding: 22px 30px;
+  box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.1);
+}
+
+/* Fix Safari issue with stretched img */
+.nav__logo {
+  max-width: 100px;
 }
