--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,37 @@ body,
 .nav__logo {
   max-width: 100px;
 }
+
+.hero {
+  display: flex;
+  flex-direction: column;
+  padding: 26px 36px 49px;
+}
+
+.hero__grid {
+  align-self: center;
+  max-width: 400px;
+  margin-bottom: 32px;
+}
+
+.hero__grid img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+.hero__title {
+  margin-bottom: 16px;
+  color: #000;
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 110%;
+}
+
+.hero__text {
+  max-width: 320px;
+  color: #222;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 110%;
+}
