--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,8 @@ body,
   margin-bottom: 32px;
 }
 
-.hero__grid img {
+.hero__grid img,
+.card__img {
   width: 100%;
   height: auto;
   object-fit: cover;
@@ -60,4 +61,57 @@ body,
   font-weight: 300;
   font-size: 16px;
   line-height: 110%;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+}
+
+.card__img-wrapper {
+  position: relative;
+  width: 176px;
+  height: 235px;
+  margin-bottom: 9px;
+  border-radius: 9px;
+}
+
+.card__badge {
+  position: absolute;
+  display: inline-block;
+  top: 6px;
+  left: 6px;
+  padding: 4px 6px;
+  border-radius: 2px;
+  background-color: #fff;
+  color: #222222;
+  font-weight: 400;
+  font-size: 10.24px;
+  line-height: 110%;
+  text-transform: uppercase;
+}
+
+.card__stats {
+  display: flex;
+  align-items: center;
+  gap: 2px;
+}
+
+.card__stats,
+.card__title,
+.card__price {
+  margin-bottom: 8px;
+  color: #222222;
+  font-weight: 300;
+  font-size: 12px;
+  line-height: 110%;
+}
+
+.card__count,
+.card__state {
+  color: #918e9b;
+}
+
+.card__price strong {
+  font-weight: 600;
 }
